# mlops-edu-project

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
data/raw/: UCI_Credit_Card.csv.dvc
deploy/base/: ingress.yaml  kustomization.yaml  namespace.yaml
deploy/base/backend/: deployment.yaml  service.yaml
deploy/base/frontend/: deployment.yaml
deploy/monitoring/: alerts.yaml  loki-values.yaml  prometheus-values.yaml
deploy/overlays/prod/: kustomization.yaml
deploy/overlays/staging/: kustomization.yaml
frontend/: Dockerfile  index.html  nginx.conf  package.json
infra/: backend.hcl  main.tf  outputs.tf  variables.tf
infra/modules/k8s/: main.tf  outputs.tf  variables.tf
infra/modules/monitoring/: main.tf
infra/modules/storage/: main.tf  outputs.tf
infra/modules/vpc/: main.tf  outputs.tf
models/onnx/: model.onnx  model_int8.onnx
models/pytorch/: meta.json  metrics.json  model.pt  scaler.pkl
ops/airflow/: docker-compose.yml
ops/airflow/dags/: retrain.py
ops/drift/: cronjob.yaml  monitor.py
reports/: README.md  benchmark.csv  report.txt
reports/drift/: drift_report_20260131_033602.json
scoring/: __init__.py
scoring/api/: main.py
scoring/data/: prepare.py  schema.py
scoring/model/: benchmark.py  network.py  onnx_export.py  quantize.py  train.py
tests/: locustfile.py  test_api.py  test_data.py
